[NO-JIRA] Remove reported code smells about usages of toList