@@ -23,8 +23,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import org.junit.rules.ExternalResource;
 
 import static com.google.common.base.Preconditions.checkState;
@@ -118,6 +116,6 @@ public class MetricRepositoryRule extends ExternalResource implements MetricRepo
 
   @Override
   public List<Metric> getMetricsByType(Metric.MetricType type) {
-    return metricsByKey.values().stream().filter(m -> m.getType() == type).collect(Collectors.toList());
+    return metricsByKey.values().stream().filter(m -> m.getType() == type).toList();
   }
 }
