@@ -83,7 +83,7 @@ public class ServerPluginManager implements Startable {
   }
 
   private Collection<ExplodedPlugin> extractPlugins(Collection<ServerPluginInfo> plugins) {
-    return plugins.stream().map(pluginJarExploder::explode).collect(Collectors.toList());
+    return plugins.stream().map(pluginJarExploder::explode).toList();
   }
 
   private static List<ServerPlugin> createServerPlugins(Collection<ExplodedPlugin> explodedPlugins, Map<String, Plugin> instancesByKey, Map<String, PluginType> typesByKey) {
