@@ -100,7 +100,7 @@ public class SearchAction implements ProjectLinksWsAction {
     return SearchWsResponse.newBuilder()
       .addAllLinks(links.stream()
         .map(SearchAction::buildLink)
-        .collect(Collectors.toList()))
+        .toList())
       .build();
   }
 
