@@ -75,7 +75,7 @@ public class QualityGateConditionsUpdater {
     ValueType.RATING,
     ValueType.WORK_DUR);
 
-  private static final List<String> RATING_VALID_INT_VALUES = stream(Rating.values()).map(r -> Integer.toString(r.getIndex())).collect(Collectors.toList());
+  private static final List<String> RATING_VALID_INT_VALUES = stream(Rating.values()).map(r -> Integer.toString(r.getIndex())).toList();
 
   private final DbClient dbClient;
 
