@@ -25,7 +25,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.sonar.api.rule.RuleKey;
 import org.sonar.api.rule.RuleStatus;
 import org.sonar.api.rule.Severity;
@@ -130,7 +129,7 @@ public class CreateAction implements RulesWsAction {
       .setPossibleValues(
         Arrays.stream(RuleStatus.values())
           .filter(status -> !RuleStatus.REMOVED.equals(status))
-          .collect(Collectors.toList()))
+          .toList())
       .setDefaultValue(RuleStatus.READY)
       .setDescription("Rule status");
 
